--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -215,11 +215,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HPR-UK-3Dz">
-                                <rect key="frame" x="10" y="74" width="355" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="TtC-1a-d4w">
+                                <rect key="frame" x="11" y="74" width="353" height="98"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="HwL-Ff-BbK">
-                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="353" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3XW-eB-pbR">
                                                 <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
@@ -231,27 +231,47 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Se-qX-lMN">
-                                                <rect key="frame" x="46" y="0.0" width="126.5" height="30"/>
+                                                <rect key="frame" x="46" y="0.0" width="307" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="eiu-dS-1qi">
-                                        <rect key="frame" x="182.5" y="0.0" width="172.5" height="30"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="8aD-Yz-oJd">
+                                        <rect key="frame" x="0.0" y="34" width="353" height="30"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6b-uT-eNL">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5hn-r3-4xz">
                                                 <rect key="frame" x="0.0" y="0.0" width="66" height="30"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="65.5" id="cfQ-DR-dwo"/>
+                                                    <constraint firstAttribute="width" constant="65.5" id="Kcz-27-V73"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cbN-wT-bkh">
-                                                <rect key="frame" x="76" y="0.0" width="96.5" height="30"/>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WOg-Eu-d1X">
+                                                <rect key="frame" x="76" y="0.0" width="277" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sUF-fr-IgY">
+                                        <rect key="frame" x="0.0" y="68" width="353" height="30"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixm-bR-bkn">
+                                                <rect key="frame" x="0.0" y="0.0" width="87" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="87" id="dhz-Tg-3AR"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Optional" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zvE-Na-lZH">
+                                                <rect key="frame" x="97" y="0.0" width="256" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
@@ -259,57 +279,43 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="8aD-Yz-oJd" firstAttribute="leading" secondItem="TtC-1a-d4w" secondAttribute="leading" id="5CF-k2-7CB"/>
+                                    <constraint firstItem="HwL-Ff-BbK" firstAttribute="leading" secondItem="TtC-1a-d4w" secondAttribute="leading" id="Dh5-eB-ZO6"/>
+                                    <constraint firstAttribute="trailing" secondItem="8aD-Yz-oJd" secondAttribute="trailing" id="GAB-hz-JO0"/>
+                                    <constraint firstItem="sUF-fr-IgY" firstAttribute="leading" secondItem="TtC-1a-d4w" secondAttribute="leading" id="RH1-kr-Bq1"/>
+                                    <constraint firstAttribute="trailing" secondItem="sUF-fr-IgY" secondAttribute="trailing" id="ekI-ga-5Gd"/>
+                                    <constraint firstAttribute="trailing" secondItem="HwL-Ff-BbK" secondAttribute="trailing" id="xCw-vC-uNE"/>
+                                </constraints>
                             </stackView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6UN-oG-i3J">
-                                <rect key="frame" x="10" y="154" width="355" height="459"/>
+                                <rect key="frame" x="10" y="182" width="355" height="431"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
                             </textView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sUF-fr-IgY">
-                                <rect key="frame" x="10" y="114" width="355" height="30"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Trip Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixm-bR-bkn">
-                                        <rect key="frame" x="0.0" y="0.0" width="87" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="87" id="dhz-Tg-3AR"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Optional" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zvE-Na-lZH">
-                                        <rect key="frame" x="97" y="0.0" width="258" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="6UN-oG-i3J" secondAttribute="trailing" constant="10" id="03y-2d-9uf"/>
-                            <constraint firstItem="sUF-fr-IgY" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="5hL-ms-fYc"/>
-                            <constraint firstItem="HPR-UK-3Dz" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="97z-IT-yRZ"/>
-                            <constraint firstItem="sUF-fr-IgY" firstAttribute="top" secondItem="HPR-UK-3Dz" secondAttribute="bottom" constant="10" id="IsY-ui-zdx"/>
-                            <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="sUF-fr-IgY" secondAttribute="bottom" constant="10" id="VZp-TP-RuP"/>
-                            <constraint firstItem="HPR-UK-3Dz" firstAttribute="top" secondItem="KWp-x1-Kqo" secondAttribute="bottom" constant="10" id="WIE-Jg-PdV"/>
-                            <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="sUF-fr-IgY" secondAttribute="bottom" constant="10" id="Xt2-9d-uAi"/>
+                            <constraint firstItem="TtC-1a-d4w" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leadingMargin" constant="-5" id="2vF-a8-DUh"/>
+                            <constraint firstItem="TtC-1a-d4w" firstAttribute="top" secondItem="KWp-x1-Kqo" secondAttribute="bottom" constant="10" id="QIC-is-5BE"/>
                             <constraint firstItem="6UN-oG-i3J" firstAttribute="leading" secondItem="bTJ-6h-L8o" secondAttribute="leading" constant="10" id="dAe-HS-g6G"/>
-                            <constraint firstAttribute="trailing" secondItem="sUF-fr-IgY" secondAttribute="trailing" constant="10" id="ghc-qX-qNA"/>
-                            <constraint firstAttribute="trailing" secondItem="HPR-UK-3Dz" secondAttribute="trailing" constant="10" id="sHV-e9-dQM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="TtC-1a-d4w" secondAttribute="trailing" constant="-5" id="lxY-1B-bTM"/>
                             <constraint firstItem="lCp-Af-4Wr" firstAttribute="top" secondItem="6UN-oG-i3J" secondAttribute="bottom" constant="10" id="vgA-Ed-F2B"/>
+                            <constraint firstItem="6UN-oG-i3J" firstAttribute="top" secondItem="TtC-1a-d4w" secondAttribute="bottom" constant="10" id="xWc-rn-9x7"/>
                         </constraints>
                     </view>
                     <toolbarItems>
                         <barButtonItem image="Camera-50" id="Ats-XL-Rhc">
+                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                             <connections>
                                 <action selector="importImage:" destination="TYM-nd-d0E" id="WFD-FC-hB1"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="wda-W4-gxP"/>
                         <barButtonItem image="Picture-50" id="cIb-r4-XZ9">
+                            <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                             <connections>
                                 <action selector="importImage:" destination="TYM-nd-d0E" id="Pfm-Kh-aDK"/>
                             </connections>
@@ -333,7 +339,7 @@
                         <outlet property="cameraButton" destination="Ats-XL-Rhc" id="Yhy-6U-phl"/>
                         <outlet property="dateTextField" destination="2Se-qX-lMN" id="ls4-eN-zg0"/>
                         <outlet property="journalTextView" destination="6UN-oG-i3J" id="cQj-VR-em5"/>
-                        <outlet property="locationTextField" destination="cbN-wT-bkh" id="FBp-7s-xsS"/>
+                        <outlet property="locationTextField" destination="WOg-Eu-d1X" id="IRg-Y3-xil"/>
                         <outlet property="saveButton" destination="fZO-E6-RLF" id="8Nz-4W-JRz"/>
                         <outlet property="tripNameTextField" destination="zvE-Na-lZH" id="MbE-sM-lgu"/>
                         <outlet property="uploadButton" destination="cIb-r4-XZ9" id="kMU-7W-RGy"/>
