Click on marker to see journal details

--- a/TripLog/Base.lproj/Main.storyboard
+++ b/TripLog/Base.lproj/Main.storyboard
@@ -512,6 +512,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="Wqa-rV-cbl" kind="show" identifier="ViewJournalDetails" id="QgE-Uu-uVG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VoN-7J-ccC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -587,7 +590,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="40T-Ao-65o">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TripsTableViewCell" rowHeight="107" id="f0R-CQ-g9G" customClass="TripsTableViewCell" customModule="TripLog" customModuleProvider="target">
@@ -669,14 +672,18 @@
         <!--Trips-->
         <scene sceneID="RER-es-fMh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gn5-d1-5bN" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="Gn5-d1-5bN" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Trips" image="earth-america-7" id="mRj-g3-65c"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="SkW-eI-q9c">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="SkW-eI-q9c">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Ado-ox-3Mx">
+                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="g5g-fR-eE6" kind="relationship" relationship="rootViewController" id="Zdo-cN-akS"/>
                     </connections>
@@ -693,8 +700,9 @@
         <image name="note-write-7" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Dnh-YK-hGp"/>
-        <segue reference="dCT-tE-Y8K"/>
         <segue reference="jZf-ad-41L"/>
+        <segue reference="Dnh-YK-hGp"/>
+        <segue reference="qgu-Bx-CKy"/>
+        <segue reference="6LY-FJ-1bW"/>
     </inferredMetricsTieBreakers>
 </document>
